<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:orientation="vertical"

    tools:context="com.example.nabahat.tracking.MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color" >

        <ImageView
            android:id="@+id/close_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="top|end"
            android:layout_margin="4dp"
            android:contentDescription="@string/closebutton"
            android:padding="5dp"
            android:src="@drawable/close" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/login_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:focusable="true"
            android:foregroundGravity="center_vertical|center_horizontal|center"
            android:gravity="center_vertical|center_horizontal|center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="CIIT DRIVER"
                android:textColor="@color/white_greyish"
                android:textSize="35sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/signUp"
                android:textColor="@color/white_greyish"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/lay_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/fullName"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/lay_emailSignup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/lay_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/phone"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/mobileNumber"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/lay_routenumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/location"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/location"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/lay_passwordsignup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/passowrd"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/confirm_password"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/terms_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/terms_conditions"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/loginbutton_selector"
                android:clickable="true"
                android:padding="3dp"
                android:text="@string/signUp"
                android:textColor="@color/background_color"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/already_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/already_user"
                android:textColor="@color/white_greyish"
                android:textSize="15sp" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/frameContainer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/close_activity" />

        <!--                <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/lay_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="22dp"
                                android:layout_marginRight="35dp"
                                android:background="#0000"
                                android:drawableRight="@drawable/pasword"
                                android:hint="Name"
                                android:inputType="text"
                                android:maxLength="12"
                                android:padding="16dp"
                                android:textColor="#ADCCE2"
                                android:textColorHint="#ADCCE2"
                                android:textSize="16dp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginBottom="10dp"
                                android:layout_marginLeft="40dp"
                                android:layout_marginRight="40dp"
                                android:background="#ADCCE2" />
                            <EditText
                                android:id="@+id/lay_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="22dp"
                                android:layout_marginRight="35dp"

                                android:background="#0000"
                                android:drawableRight="@drawable/user"
                                android:hint="Email"
                                android:inputType="text"
                                android:padding="16dp"
                                android:textColor="#ADCCE2"
                                android:textColorHint="#ADCCE2"
                                android:textSize="16dp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginLeft="40dp"
                                android:layout_marginRight="40dp"
                                android:background="#ADCCE2" />

                            <EditText
                                android:id="@+id/lay_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="22dp"
                                android:layout_marginRight="35dp"
                                android:background="#0000"
                                android:drawableRight="@drawable/pasword"
                                android:hint="Password"
                                android:inputType="textPassword"
                                android:maxLength="12"
                                android:padding="16dp"
                                android:textColor="#ADCCE2"
                                android:textColorHint="#ADCCE2"
                                android:textSize="16dp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginBottom="10dp"
                                android:layout_marginLeft="40dp"
                                android:layout_marginRight="40dp"
                                android:background="#ADCCE2" />

                            <EditText
                                android:id="@+id/lay_phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="22dp"
                                android:layout_marginRight="35dp"
                                android:background="#0000"
                                android:drawableRight="@drawable/pasword"
                                android:hint="Phone Number"
                                android:inputType="number"
                                android:maxLength="12"
                                android:padding="16dp"
                                android:textColor="#ADCCE2"
                                android:textColorHint="#ADCCE2"
                                android:textSize="16dp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginBottom="10dp"
                                android:layout_marginLeft="40dp"
                                android:layout_marginRight="40dp"
                                android:background="#ADCCE2" />

                            <EditText
                                android:id="@+id/lay_busnumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="22dp"
                                android:layout_marginRight="35dp"
                                android:background="#0000"
                                android:drawableRight="@drawable/user"
                                android:hint="Route Number"
                                android:inputType="number"
                                android:maxLength="12"
                                android:padding="16dp"
                                android:textColor="#ADCCE2"
                                android:textColorHint="#ADCCE2"
                                android:textSize="16dp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginBottom="10dp"
                                android:layout_marginLeft="40dp"
                                android:layout_marginRight="40dp"
                                android:background="#ADCCE2" />

                            <TextView
                                android:id="@+id/lay_signin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_marginBottom="28dp"
                                android:layout_marginLeft="40dp"
                                android:layout_marginRight="40dp"
                                android:layout_marginTop="32dp"
                                android:background="@drawable/angle"
                                android:gravity="center"
                                android:padding="16dp"
                                android:text="Sign In"
                                android:textColor="#fff"
                                android:textSize="16dp" />

                            <TextView
                                android:id="@+id/lay_signup"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_marginBottom="28dp"
                                android:layout_marginLeft="40dp"
                                android:layout_marginRight="40dp"
                                android:background="@drawable/angle"
                                android:gravity="center"
                                android:padding="16dp"
                                android:text="Sign Up"
                                android:textColor="#fff"
                                android:textSize="16dp" />
                        </LinearLayout>-->


    </RelativeLayout>

</ScrollView>






